refactor(Service): `getAll`메서드들 list return 체이닝 간소화